# sTrut

./: .gitignore  CMakeLists.txt  Expr.h  README.md  Scanner.cpp  Scanner.h  Token.cpp  Token.h  TokenType.h  ast.cpp  ast.h
interpreter/: Expr.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  TokenType.h  ast.cpp  ast.h  main.cpp  printAst.cpp
tools/: generate_ast.py
